# SWS

./: Makefile.am  README  configure.ac
src/: main.cc
src/config/: config.cc  config.hh
src/events/: event-loop.cc  event-loop.hh  events.cc  events.hh  listener.cc  listener.hh  recv-response-body.cc  recv-response-body.hh  recv-response-header.cc  recv-response-header.hh  recvbody.cc  recvbody.hh  recvheader.cc  recvheader.hh  register.cc  register.hh  send-request.cc  send-request.hh  send-response.cc  send-response.hh
src/misc/: exceptions.cc  exceptions.hh  fd.cc  fd.hh  file_to_string.cc  file_to_string.hh  inet.cc  inet.hh  uri.cc  uri.hh
src/request/: error.cc  error.hh  request.cc  request.hh  response.cc  response.hh
src/run/: run.cc  run.hh
src/socket/: default-socket.cc  default-socket.hh  ssl-socket.cc  ssl-socket.hh
src/vhost/: dispatcher.cc  dispatcher.hh  load-balancer-factory.cc  load-balancer-factory.hh  load-balancer.cc  load-balancer.hh  vhost-factory.cc  vhost-factory.hh  vhost-reverse-proxy.cc  vhost-reverse-proxy.hh  vhost-static-file.cc  vhost-static-file.hh  vhost.cc  vhost.hh
tests/integration/: conftest.py  launch.sh  requirements.txt
tests/integration/config/: config.yaml
tests/integration/http/: http.yaml  request.sh
tests/json_config/: auth_basic_no_basic_users.json  bad_config.json  bad_keep_alive_timeout.json  bad_proxy_timeout.json  bad_throughput_time.json  bad_throughput_val.json  bad_transaction_timeout.json  impossible_ip.json  impossible_ip2.json  impossible_ip3.json  impossible_ip4.json  impossible_ip5.json  impossible_port.json  impossible_port2.json  multiple_default_vhosts.json  no_default_vhost.json  one_default_vhost.json  one_vhost_custom_file.json  one_vhost_ipv6_tmp.json  one_vhost_tmp.json  proxy_and_default_file.json  proxy_and_root.json  ssl_key_no_cert.json  throughput_no_val.json  timeout_keep_alive.json  timeout_throughput.json  timeout_throughput_no_time.json  timeout_transaction.json  undifferentiable_vhosts.json  undifferentiable_vhosts_ip.json  valid_proxy_and_upstream.json  valid_proxy_no_upstream.json  valid_sni_callback.json  valid_ssl_and_auth.json
tests/unit/: main.cc
tests/unit/config/: config.cc
tests/unit/vhost/: process-target-resource.cc
